[XForms] repeat-attrs on table causing complex content binding error. Bug 377874, r=olli+surkov